@@ -1,3 +1,7 @@
+Thu Sep 11 02:59:47 2008  Tanaka Akira  <akr@fsij.org>
+
+	* io.c (io_binwrite): extracted from io_fwrite.
+
 Thu Sep 11 02:25:34 2008  Tanaka Akira  <akr@fsij.org>
 
 	* transcode.c (make_encoding): new function.
